--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .idea
-/bin/datas
+portfolio_v2.sql
+protfolio_v2.mwb
+protfolio_v2.mwb.bak
 config.php
+PortFolio.bmpr
 PlanningPortfolio.pdf
 SitePortfolio.pdf
