--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ protfolio_v2.mwb
 protfolio_v2.mwb.bak
 config.php
 PortFolio.bmpr
-PlanningPortfolio.pdf
-SitePortfolio.pdf
+Content/PlanningPortfolio.pdf
+Content/SitePortfolio.pdf
