--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ portfolio_v2.sql
 protfolio_v2.mwb
 protfolio_v2.mwb.bak
 config.php
-PortFolio.bmpr
-Content/PlanningPortfolio.pdf
-Content/SitePortfolio.pdf
+style.bmpr
+bin/content/PlanningPortfolio.pdf
+bin/content/SitePortfolio.pdf
